# homelab-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
config/: inventory.example.yaml  inventory.yaml  system_prompt.md
homelab_agent/: config.py  main.py
homelab_agent/tools/: arr.py  emby.py  homeassistant.py  inventory.py  pihole.py  proxmox.py  ssh.py  transmission.py  uptimekuma.py
